# n8n-flow-manager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  setup.sh  verify_installation.py
examples/: __init__.py  backup_restore_example.py  basic_usage.py  workflow_template_example.py
src/n8n_manager/: __init__.py  client.py  exceptions.py
src/n8n_manager/api/: __init__.py  credentials.py  executions.py  workflows.py
src/n8n_manager/cli/: __init__.py  main.py
src/n8n_manager/models/: __init__.py  credential.py  execution.py  workflow.py
src/n8n_manager/utils/: __init__.py  templating.py
templates/: README.md  example_workflow.json
tests/: test_api_complete.py  test_client.py  test_client_complete.py  test_integration_credentials.py  test_integration_executions.py  test_models.py  test_templating.py  test_templating_complete.py  test_workflows_complete.py
