[project]
name = "n8n-flow-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "mgobea_meli",email = "mariano.gobea@mercadolibre.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "n8n_flow_manager", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
